--- a/css/common.css
+++ b/css/common.css
@@ -154,7 +154,7 @@
 
 .faq dl dd {display:none;position:relative;width:100%;padding:10px 4%;background-color:#fff;font-size:14px;color:#666;line-height:22px}
 
-.faq dl dd strong {display:block;padding:0 0 15px 8px;font-size:15px;font-weight:200;color:#000}
+.faq dl dd strong {display:block;padding:0 0 15px 8px;font-size:15px;color:#000}
 
 .faq dl dd ul {margin:0 0 20px}
 .faq dl dd ul li {position:relative;padding:0 0 7px 20px;font-size:13px;line-height:21px;letter-spacing:-0.4px}
